--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "aos": "^2.3.4",
-    "next": "12.3.0",
+    "next": "^13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typewriter-effect": "^2.19.0"
