--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.5",
     "aos": "^2.3.4",
     "next": "^13.1.3",
     "react": "18.2.0",
@@ -20,8 +18,11 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
-    "react-icons": "^4.6.0"
+    "postcss": "^8.4.21",
+    "react-icons": "^4.6.0",
+    "tailwindcss": "^3.2.4"
   }
 }
